# CTRegistrationHandEye

./: OverlayPoints.py  OverlayPointsNotes.txt  Visualization instructions.txt
CTRegistrationHandEye/: CMakeLists.txt
CTRegistrationHandEye/CTRegistrationHandEye/: CMakeLists.txt  CTRegistrationHandEye.py  Draw2DPointsOnImg.py
CTRegistrationHandEye/CTRegistrationHandEye/Resources/UI/: CTRegistrationHandEye.ui
